--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/rpyutils
-	previous = 
-	base = fe26b06
+	previous = fe26b06
+	base = 867db2b
 	trim = 
 	trimbase = 
